[project]
name = "Control_Smoothness_enhancement"
version = "0.1.0"
description = "Comparison between MOO-based framework with five baseline algorithms"
readme = "README.md"
requires-python = "==3.9.6"
dependencies = [
    "gurobipy==11.0.1",
    "ipykernel==6.29.4",
    "matplotlib==3.7.1",
    "nbconvert>=7.16.6",
    "numpy==1.24.2",
    "pandas==2.0.0",
    "pip>=25.1.1",
    "pymoo==0.6.1.1",
    "scikit-opt==0.6.6",
    "seaborn==0.12.2",
]
